--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,7 @@ a {
 
 nav {
     width: 100%;
-    background-color: slategrey;
+    background-color: black;
     position: relative;
 }
 
@@ -44,7 +44,7 @@ span.links {
 
 footer {
   display: none;
-  background-color: slategrey;
+  background-color: black;
 }
 
 @media (min-width: 800px) {
