--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,11 +17,31 @@ a {
   background-repeat: repeat;
 }
 
-.chart-container {
-  position: relative;
-  margin: auto;
+div.block {
   height: 80vh;
   width: 80vw;
+  margin: auto
+}
+.options {
+  color: white;
+  display: block;
+  width: auto;
+  font-size: 1.1em;
+}
+
+select {
+  display: inline;
+  cursor: pointer;
+  padding: 5px;
+}
+
+
+
+.chart-container {
+  position: relative;
+  /* margin: auto; */
+  height: 100%;
+  width: 100%;
   cursor: pointer;
 }
 
@@ -57,9 +77,8 @@ footer {
   }
 }
 @media (min-width: 801px) and (max-width: 1100px) {
-  .chart-container {
+  .block {
     width: 100%;
-
   }
 }
 
@@ -69,12 +88,14 @@ footer {
   }
   #container {
     height: auto;
-
   }
 
+  div.block {
+    height: auto;
+    width: 100%;
+  }
   .chart-container {
     height: 100vh;
-    width: 100%;
   }
   footer {
     display: block;
