--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,6 @@
 #container {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-image: url('../images/pattern/double-bubble-dark.png');
     background-repeat: repeat;
