--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,7 +78,7 @@ footer {
     height: auto;
     width: 100%;
   }
-  .chart-container {
+  div.chart-container {
     height: 100vh;
   }
   footer {
