again css changes

--- a/views/squares.pug
+++ b/views/squares.pug
@@ -16,7 +16,11 @@ block content
             span.links 
                 a(href="") About me
                 a(href="") Github
-        
+    
+    footer 
+            span.links 
+                a(href="") About me 
+                a(href="") Github
     script(src="./javascripts/main.js")
     script(src="./javascripts/squares.js")     
     script.
