--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,7 @@ body {
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 a {
   color: #00B7FF;
@@ -44,6 +45,37 @@ span.links {
     right: 0;
     top: 50%;
     transform: translateY(-50%);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: fit-content;
+}
+
+.links a {
+  text-decoration: none;
+  transition: 0.5s;
+  width: auto;
+  padding: 5px;
+  margin-right: 15px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+}
+
+.links a:hover {
+  background-color:dimgray;
+  color: white;
+  border-radius: 5px;
+  border: 1px solid white;
+}
+
+.name {
+  font-weight: bold;
+  font-size: 1.2em;
+  position: absolute;
+  left: 5%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 footer {
@@ -56,9 +88,6 @@ footer {
     height: 5vh;
   }
   
-  span.links a {
-    padding-right: 20px;
-  }
 }
 @media (min-width: 801px) and (max-width: 1100px) {
   .block {
@@ -73,7 +102,10 @@ footer {
   #container {
     height: auto;
   }
-
+  span.links {
+    right: 50%;
+    transform: translate(50%, -50%);
+  }
   div.block {
     height: auto;
     width: 100%;
@@ -84,7 +116,7 @@ footer {
   footer {
     display: block;
     position: relative;
-    height: 10vh;
+    min-height: 15vh;
   }
 }
 
