--- a/views/squares.pug
+++ b/views/squares.pug
@@ -26,7 +26,7 @@ block content
     script.
         let stats = !{JSON.stringify(data)}
         const mode = !{mode}
-        drawCharts(stats, options())
+        drawCharts(stats, options)
         generateSelect(mode)
     
     
