--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,17 @@ a {
   color: #00B7FF;
 }
 
+.loader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  transition: 0.5s;
+}
+
 div.block {
   height: 80vh;
   width: 80vw;
