--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,3 +1,17 @@
+mixin twelveDivs()
+    div
+    div
+    div
+    div
+    div
+    div
+    div
+    div
+    div
+    div
+    div
+    div
+
 doctype html  
 html(lang='en')  
  head
@@ -5,6 +19,11 @@ html(lang='en')
    meta(charset="UTF-8")
    meta(http-equiv="X-UA-Compatible" content="IE=edge")
    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+   link(rel="stylesheet", href="./stylesheets/loader.css")
+   script(src="./javascripts/Chart.bundle.min.js")
    block links
  body
+    .loader
+        .lds-default
+            +twelveDivs()
     block content
