add loading screen and improve server perfomance

--- a/public/stylesheets/loader.css
+++ b/public/stylesheets/loader.css
@@ -1,3 +1,7 @@
+/* from loading.io under CC0 license */
+/* https://loading.io/css/ */
+/* https://loading.io/license/ */
+
 .lds-default {
     display: inline-block;
     position: absolute;
