add links in nav

--- a/views/main.pug
+++ b/views/main.pug
@@ -19,8 +19,8 @@ block content
         nav 
             span.name WOT Server Stats
             span.links 
-                a(href="") About me
-                a(href="") Github
+                a(href="/about") About me
+                a(href="https://github.com/DontEatRice/Server-Stats-WOT" target='_blank') Github
         div.block 
             div(class="chart-container")
                 canvas#chart
